@@ -2,6 +2,8 @@ Versionsänderungen:
 ===================
 ####Version 1.4.2:    
 - Option hide="Personenanzeige_Lehrveranstaltungen" bei task="mitarbeiter-einzeln" ergänzt         
+- Parameter "sortiere_alphabet"=1 ergänzt für Mitarbeiter-Ausgabe    
+- Bugfix für Mitarbeiter mit gleichem Namen    
 
 ####Version 1.4.1:    
 - Bugfix lehrveranstaltungen-einzeln     
